@@ -63,15 +63,18 @@
     (should-not (get-text-property (match-beginning 0) 'face))))
 
 (ert-deftest ebuild-mode-test-collect-and-split ()
-  (let ((alist '(((a b) z) ((c d) z) ((e) z) ((f) z) ((g h) z)
-		 ((i j) y) ((k) y) ((l m) x) ((n) z) ((o p) y)
-		 ((q r s t u v) w))))
+  (let* ((alist '(((a b) z) ((c d) z) ((e) z) ((f) z) ((g h) z)
+		  ((i j) y x) ((k) y x) ((l)) ((m) z) ((n o) y x) ((p))
+		  ((q r s t u v) w)))
+	 (alist-copy (copy-tree alist)))
     (should (equal (ebuild-mode-collect-and-split alist)
-		   '(((q r s t u v) w) ((l m) x) ((i j k o p) y)
-		     ((a b c d e f g h n) z))))
+		   '(((q r s t u v) w) ((l p)) ((i j k n o) y x)
+		     ((a b c d e f g h m) z))))
     (should (equal (ebuild-mode-collect-and-split alist 4)
-		   '(((q r) w) ((s t u v) w) ((o p) y) ((n) z) ((l m) x)
-		     ((i j k) y) ((e f g h) z) ((a b c d) z))))))
+		   '(((q r) w) ((s t u v) w) ((n o) y x) ((m) z) ((l p))
+		     ((i j k) y x) ((e f g h) z) ((a b c d) z))))
+    ;; was it non-destructive?
+    (should (equal alist alist-copy))))
 
 (ert-deftest ebuild-mode-test-update-copyright ()
   (let ((ebuild-mode-update-copyright t))
