@@ -1,3 +1,10 @@
+2024-08-20  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-mode-collect-and-split): Don't copy the
+	element when creating a cons cell is enough.
+	* test/ebuild-mode-tests.el (ebuild-mode-test-collect-and-split):
+	Update.
+
 2024-08-19  Ulrich Müller  <ulm@gentoo.org>
 
 	* ebuild-mode.el:
